--- a/testmigrate.yml
+++ b/testmigrate.yml
@@ -8,8 +8,8 @@
   connection: "{{var_connection}}"
   gather_facts: yes
   vars_files:
-    - hosts.config
-    - testmigrate.config
+    - config/hosts.config
+    - config/testmigrate.config
   roles:
     - migrate
     - galaxyfirewall
