--- a/roles/addldap/defaults/main.yml
+++ b/roles/addldap/defaults/main.yml
@@ -1,2 +1,10 @@
 ---
 # defaults file for addldap
+
+ldap_defaults:
+  login_use_username: False
+  allow_password_change: False
+  allow_register: True
+  auto-register: False
+  continue_on_failure: False
+  
