--- a/roles/addldap/vars/main.yml
+++ b/roles/addldap/vars/main.yml
@@ -1,3 +1,3 @@
 ---
 # vars file for addldap
-ldap: {{ ldap_defaults | combine(ldap_settings) }}
+ldap: "{{ ldap_defaults | combine(ldap_settings) }}"
