--- a/ansible.cfg
+++ b/ansible.cfg
@@ -32,7 +32,7 @@ sudo_user      = root
 #gathering = implicit
 
 # additional paths to search for roles in, colon separated
-#roles_path    = /etc/ansible/roles
+roles_path    = ./roles
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
