--- a/rundockergalaxy.yml
+++ b/rundockergalaxy.yml
@@ -1,12 +1,9 @@
 --- # On a machine with docker installed, it runs the docker image. 
 
-- hosts: "{{var_hosts}}"
+- hosts: "{{hosts}}"
   become: yes
   become_method: sudo
   gather_facts: yes
-  vars_files:
-  - config/galaxydocker.config
-  vars:
   roles:
     - galaxyfirewall
     - rundockergalaxy     
