--- a/ansible.cfg
+++ b/ansible.cfg
@@ -38,7 +38,7 @@ roles_path    = ./roles
 #host_key_checking = False
 
 # change the default callback
-#stdout_callback = skippy
+stdout_callback = skippy
 # enable additional callbacks
 #callback_whitelist = timer, mail
 
@@ -96,7 +96,7 @@ roles_path    = ./roles
 # should not be run on a host.  Set this to "False" if you don't want to see these "Skipping" 
 # messages. NOTE: the task header will still be shown regardless of whether or not the 
 # task is skipped.
-#display_skipped_hosts = True
+# display_skipped_hosts = False
 
 # by default (as of 1.3), Ansible will raise errors when attempting to dereference 
 # Jinja2 variables that are not set in templates or action lines. Uncomment this line
