updated universal.yml and added skippy plugin to not show headers of skipped tasks

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-inventory      = ./config/hosts
+inventory      = ./hosts
 #library        = /usr/share/my_modules/
 #remote_tmp     = $HOME/.ansible/tmp
 #forks          = 5
@@ -125,7 +125,7 @@ stdout_callback = skippy
 
 # set plugin path directories here, separate with colons
 #action_plugins     = /usr/share/ansible/plugins/action
-#callback_plugins   = /usr/share/ansible/plugins/callback
+callback_plugins   = ./plugins/callback
 #connection_plugins = /usr/share/ansible/plugins/connection
 #lookup_plugins     = /usr/share/ansible/plugins/lookup
 #vars_plugins       = /usr/share/ansible/plugins/vars
