--- a/universal.yml
+++ b/universal.yml
@@ -6,7 +6,7 @@
   gather_facts: yes
   pre_tasks:
   - include_vars:
-      file: "{{item}}"
+      file: "run/{{item}}"
     with_items:
       - "{{run | default('[]')}}"    
   roles:
