--- a/universal.yml
+++ b/universal.yml
@@ -9,10 +9,12 @@
       file: "run/{{item}}"
     with_items:
       - "{{run | default('[]')}}"    
+
   roles:
     - { role: installdocker, when: "{{ installdocker | default('False')}}" }
-    - { role: galaxyfirewall, when: "{{ galaxyfirewall | default('False')}}" }
     - { role: migrate, when: "{{ migrate | default('False')}}" }
+    - { role: upgrade, when: "{{ upgrade | default('False')}}" }
+    - { role: galaxyfirewall, when: "{{ galaxyfirewall | default('False')}}" }
     - { role: rundockergalaxy, when: "{{ rundockergalaxy | default('False')}}" }    
     - { role: installtools, when: "{{ installtools | default('False')}}" }
     - { role: backupgalaxy, when: "{{ backupgalaxy | default('False')}}" }
