--- a/hosts.sample
+++ b/hosts.sample
@@ -1,7 +1,8 @@
 [galaxy]
-
 example_host ansible_host=example_host.example_domain.tld ansible_user=remote_user
 
 [galaxy:vars]
+
+[all:vars]
 ansible_ssh_pipelining=yes
 ansible_connection=ssh
