--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ hosts
 host_vars/*
 !host_vars/example_host
 
+!group_vars/
+group_vars/*
+!group_vars/example_group
+
 !files/
 files/*
 !files/example_host
