--- a/roles/installtools/tasks/main.yml
+++ b/roles/installtools/tasks/main.yml
@@ -69,6 +69,11 @@
     src: shed_install.py
     dest: "{{work_dir}}/shed_install.py"
 
+- name: check if ephemeris tool installer is properly copied
+  wait_for:
+    path: "{{work_dir}}/shed_install.py"
+    timeout: 5
+
 - name: Use ephemeris shed install to install tools 
   command: "python {{work_dir}}/shed_install.py -g localhost:{{galaxy_web_port}} -a {{galaxy_master_api_key}} -t {{item}}"
   with_items: "{{tool_list_files}}"
