--- a/roles/extractdb/defaults/main.yml
+++ b/roles/extractdb/defaults/main.yml
@@ -1,2 +1,7 @@
 ---
 # defaults file for extractdb
+
+exported_db_file: "postgresql/galaxy_database.{{ansible_date_time.iso8601}}.dump"
+container_postgres_user: "1550"
+container_database_name: "galaxy"
+fetch_location: "files/{{inventory_hostname}}/database_extract/"
