--- a/main.yml
+++ b/main.yml
@@ -12,6 +12,7 @@
 
   roles:
     - { role: installdocker, when: "{{ installdocker | default('False')}}" }
+    - { role: importdb, when: "{{ importdb | default('False')}}" }    
     - { role: upgrade, when: "{{ upgrade | default('False')}}" }
     - { role: galaxyfirewall, when: "{{ galaxyfirewall | default('False')}}" }
     - { role: rundockergalaxy, when: "{{ rundockergalaxy | default('False')}}" }    
