--- a/roles/extractdb/defaults/main.yml
+++ b/roles/extractdb/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 # defaults file for extractdb
 
+backup_db_compression_level: 6
 backup_db_filename: "galaxy_database.{{ansible_date_time.iso8601}}.dump"
 exported_db_file: "postgresql/{{backup_db_filename}}"
 container_postgres_user: "1550"
