--- a/roles/cronbackupdb/defaults/main.yml
+++ b/roles/cronbackupdb/defaults/main.yml
@@ -8,4 +8,4 @@ backup_db_file: "galaxydb_backup-$(TZ='UTC' date +'%Z%Y%m%dT%H%M%S')"
 zip_command: "pigz -{{compression_level}} -p {{compression_threads}}"
 compression_level: 6
 compression_threads: 4
-cronbackupdb_log_timestamp="TZ='UTZ' date +'%Z %F %T' >"
+cronbackupdb_log_timestamp: "TZ='UTZ' date +'%Z %F %T >'"
