--- a/roles/cronbackupdb/tasks/main.yml
+++ b/roles/cronbackupdb/tasks/main.yml
@@ -1,6 +1,11 @@
 ---
 # tasks file for cronbackupdb
 
+- name: make sure pigz is installed
+  package:
+    name: pigz
+    state: latest
+
 - name: create backup folder with logs and scripts subfolders
   file:
     path: "{{item}}"
@@ -14,34 +19,36 @@
   file:
     path: "{{backup_location}}/{{item.key}}"
     state: directory
-  with_dict:"{{ backupdb_cron_jobs }}"
+  with_dict: "{{ backupdb_cron_jobs }}"
 
 - name: Create backup scripts for each job
   template:
     src: "backupscript.sh.j2"
-    dest: "{{backup_location}}/scripts/{{item.key-backupscript.sh}}"
-    mode: 0722
+    dest: "{{backup_location}}/scripts/{{item.key}}-backupscript.sh"
+    mode: 0744
   vars:
-    backup_archive: "{{item.filename}}$(TZ='UTZ' date +'{{item.timestamp}}').gz"
+    backup_archive: "{{item.value.filename}}$(TZ='UTZ' date +'{{item.value.timestamp}}').gz"
     backup_db_location: "{{backup_location}}/{{item.key}}"
-    files_to_keep: "{{item.files_to_keep}}"
-    compression_level: "{{item.compression_level | default(omit)}}"
-    compression_threads: "{{item.compression_threads | default(omit)}}"
+    files_to_keep: "{{item.value.files_to_keep}}"
+    compression_level: "{{item.value.compression_level | default(6)}}"
+    compression_threads: "{{item.value.compression_threads | default(4)}}"
   with_dict: "{{ backupdb_cron_jobs }}"
  
 - name: set jobs in cron
   cron:
-    job: "sh {{backup_location}}/scripts/{{item.key-backupscript.sh}}"
+    job: "sh {{backup_location}}/scripts/{{item.key}}-backupscript.sh >> {{log_file}} 2>&1"
     state: present
     user: root
     backup: yes
-    name: "{{item.description}}"
-    month: "{{item.cron.month | default(omit)}}"
-    day: "{{item.cron.day | default(omit)}}"
-    weekday: "{{item.cron.weekday | default(omit)}"
-    hour: "{{item.cron.hour | default(omit)}}"
-    minute: "{{item.cron.minute | default(omit)}}"
-    special_time: "{{item.cron.special_time | default(omit)}}"    
+    name: "{{item.value.description}}"
+    month: "{{item.value.cron.month | default(omit)}}"
+    day: "{{item.value.cron.day | default(omit)}}"
+    weekday: "{{item.value.cron.weekday | default(omit)}}"
+    hour: "{{item.value.cron.hour | default(omit)}}"
+    minute: "{{item.value.cron.minute | default(omit)}}"
+    special_time: "{{item.value.cron.special_time | default(omit)}}" 
+  vars:
+    log_file: "{{backup_location}}/logs/{{item.key}}.log"   
     
   with_dict: "{{ backupdb_cron_jobs }}"
 
