--- a/roles/cronbackupdb/tasks/main.yml
+++ b/roles/cronbackupdb/tasks/main.yml
@@ -36,7 +36,7 @@
  
 - name: set jobs in cron
   cron:
-    job: "sh {{backup_location}}/scripts/{{item.key}}-backupscript.sh >> {{log_file}} 2>&1"
+    job: "bash {{backup_location}}/scripts/{{item.key}}-backupscript.sh >> {{log_file}} 2>&1"
     state: present
     user: root
     backup: yes
@@ -49,7 +49,6 @@
     special_time: "{{item.value.cron.special_time | default(omit)}}" 
   vars:
     log_file: "{{backup_location}}/logs/{{item.key}}.log"   
-    
   with_dict: "{{ backupdb_cron_jobs }}"
 
 - name: Set job in cron to rsync backups to a remote location
