--- a/roles/cronbackupdb/defaults/main.yml
+++ b/roles/cronbackupdb/defaults/main.yml
@@ -6,5 +6,5 @@ container_postgres_user: 1550
 container_database_name: galaxy
 db_export_location: postgresql
 backup_db_file: "galaxydb_backup-$(TZ='UTC' date +'%Z%Y%m%dT%H%M%S')"
-cronbackupdb_log_timestamp: "TZ='UTZ' date +'%Z %F %T >'"
+cronbackupdb_log_timestamp: "TZ='UTC' date +'%Z %F %T >'"
 backup_user: galaxy_backup
