--- a/roles/cronbackupdb/vars/main.yml
+++ b/roles/cronbackupdb/vars/main.yml
@@ -1,3 +1,4 @@
 ---
 # vars file for cronbackupdb
 zip_command: "pigz -{{compression_level}} -p {{compression_threads}}"
+backup_galaxy_rsync_settings: "{{ default_rsync_settings | combine(backup_rsync_settings)  }}"
